Fix blog paragraph and code block spacing

--- a/css/pages/blog.css
+++ b/css/pages/blog.css
@@ -185,7 +185,7 @@
   border: 0;
   border-radius: 0;
   background: transparent;
-  padding-top: 34px;
+  padding-top: 12px;
 }
 
 .blog-post-content pre code {
